// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Incoming activity 1`] = `
Array [
  Object {
    "text": "Hello, World!",
    "type": "message",
  },
]
`;

exports[`Incoming activity 2`] = `
Array [
  Object {
    "payload": Object {
      "activity": Object {
        "text": "Hello, World!",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/INCOMING_ACTIVITY",
  },
]
`;
